I add part of header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Weather-App</title>
 </head>
 
-<body class="dark">
+<body class="light">
   <div class="container">
     <header>
       <div class="darkMode">
@@ -22,7 +22,7 @@
         <button class="search-btn">
           <img src="./public/icons/search.png" alt="Icon for SearchBar">
         </button>
-        <input type="text" class="search-bar" placeholder="Search for a city..." />
+        <input type="text" class="search-bar" placeholder="Search for your preffered city..." />
       </div>
       <div class="location">
         <div class="locationIcon">
