i add some parts like weatherdetail

--- a/index.html
+++ b/index.html
@@ -32,6 +32,110 @@
       </div>
     </header>
   </div>
+  <main>
+    <div class="container">
+      <section class="dateTimeInfo">
+        <h1 class="city">Athens</h1>
+        <div class="dateTime">
+          <span class="time">09:03</span>
+          <span class="date">Thursday, 31 Aug</span>
+        </div>
+      </section>
+      <section class="weatherDetail">
+        <div class="mainDetail">
+          <h2 class="weatherDegree">24°C</h2>
+          <div class="weatherinfo">
+            <div class="sunrise">
+              <div class="sunriseIcon">
+                <img src="/public/icons/sunrise.png" alt="Sunrise icon">
+              </div>
+              <div class="sunriseInfo">
+                <span class="sunriseTitle">Sunrise</span>
+                <span class="sunriseTime">06:37 AM</span>
+              </div>
+            </div>
+            <div class="sunset">
+              <div class="sunsetIcon">
+                <img src="/public/icons/sunset.png" alt="Sunset icon">
+              </div>
+              <div class="sunsetInfo">
+                <span class="sunsetTitle">Sunset</span>
+                <span class="sunsetTime">20:37 AM</span>
+              </div>
+            </div>
+
+          </div>
+
+
+
+        </div>
+        <div class="weatherDescription">
+          <div class="weatherIcon">
+            <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+          </div>
+          <h3 class="weatherStatu">Sunny</h3>
+        </div>
+        <div class="extraDetail">
+          <div class="humidity">
+            <div class="icon">
+              <img src="/public/icons/humidity.png" alt="Icon for Humidity">
+            </div>
+            <div class="Info">
+              <span class="Value">41%</span>
+              <span class="Title">Humidity</span>
+            </div>
+          </div>
+          <div class="wind">
+            <div class="icon">
+              <img src="/public/icons/wind.png" alt="Icon for Wind">
+            </div>
+            <div class="Info">
+              <span class="Value">2km/h</span>
+              <span class="Title">Wind Speed</span>
+            </div>
+          </div>
+          <div class="pressure">
+            <div class="icon">
+              <img src="/public/icons/pressure.png" alt="Icon for Pressure">
+            </div>
+            <div class="Info">
+              <span class="Value">997hPa</span>
+              <span class="Title">Pressure</span>
+            </div>
+          </div>
+          <div class="uv">
+            <div class="icon">
+              <img src="/public/icons/uv.png" alt="Icon for UV">
+            </div>
+            <div class="Info">
+              <span class="Value">8</span>
+              <span class="Title">UV</span>
+            </div>
+          </div>
+
+
+        </div>
+
+      </section>
+      <section class="forecast">
+        <h3 class="forecastTitle">5 Days Forecast:</h3>
+        <div class="forecastInfo">
+          <div class="forecastDay">
+            <div class="forecastIcon">
+              <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+            </div>
+            <div class="forecastDegree">
+              <span class="forecastMax">24°C</span>
+              <span class="forecastMin">18°C</span>
+            </div>
+            <span class="forecastDayName">Monday</span>
+
+          </div>
+
+        </div>
+      </section>
+    </div>
+  </main>
   <script type="module" src="main.js"></script>
 </body>
 
