--- a/index.html
+++ b/index.html
@@ -34,106 +34,229 @@
   </div>
   <main>
     <div class="container">
-      <section class="dateTimeInfo">
-        <h1 class="city">Athens</h1>
-        <div class="dateTime">
-          <span class="time">09:03</span>
-          <span class="date">Thursday, 31 Aug</span>
-        </div>
-      </section>
-      <section class="weatherDetail">
-        <div class="mainDetail">
-          <h2 class="weatherDegree">24°C</h2>
-          <div class="weatherinfo">
-            <div class="sunrise">
-              <div class="sunriseIcon">
-                <img src="/public/icons/sunrise.png" alt="Sunrise icon">
+      <div class="current">
+        <!-- Date time info -->
+        <section class="dateTimeInfo">
+          <h1 class="city">Athens</h1>
+          <div class="dateTime">
+            <span class="time">09:03</span>
+            <span class="date">Thursday, 31 Aug</span>
+          </div>
+        </section>
+        <!-- WeatherDetail -->
+        <section class="weatherDetail">
+          <div class="mainDetail">
+            <h2 class="weatherDegree">24°C</h2>
+            <div class="weatherinfo">
+              <div class="sunrise">
+                <div class="sunriseIcon">
+                  <img src="/public/icons/sunrise.png" alt="Sunrise icon">
+                </div>
+                <div class="sunriseInfo">
+                  <span class="sunriseTitle">Sunrise</span>
+                  <span class="sunriseTime">06:37 AM</span>
+                </div>
               </div>
-              <div class="sunriseInfo">
-                <span class="sunriseTitle">Sunrise</span>
-                <span class="sunriseTime">06:37 AM</span>
+              <div class="sunset">
+                <div class="sunsetIcon">
+                  <img src="/public/icons/sunset.png" alt="Sunset icon">
+                </div>
+                <div class="sunsetInfo">
+                  <span class="sunsetTitle">Sunset</span>
+                  <span class="sunsetTime">20:37 AM</span>
+                </div>
               </div>
+
             </div>
-            <div class="sunset">
-              <div class="sunsetIcon">
-                <img src="/public/icons/sunset.png" alt="Sunset icon">
-              </div>
-              <div class="sunsetInfo">
-                <span class="sunsetTitle">Sunset</span>
-                <span class="sunsetTime">20:37 AM</span>
-              </div>
-            </div>
+
+
 
           </div>
-
-
-
-        </div>
-        <div class="weatherDescription">
-          <div class="weatherIcon">
-            <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
-          </div>
-          <h3 class="weatherStatu">Sunny</h3>
-        </div>
-        <div class="extraDetail">
-          <div class="humidity">
-            <div class="icon">
-              <img src="/public/icons/humidity.png" alt="Icon for Humidity">
-            </div>
-            <div class="Info">
-              <span class="Value">41%</span>
-              <span class="Title">Humidity</span>
-            </div>
-          </div>
-          <div class="wind">
-            <div class="icon">
-              <img src="/public/icons/wind.png" alt="Icon for Wind">
-            </div>
-            <div class="Info">
-              <span class="Value">2km/h</span>
-              <span class="Title">Wind Speed</span>
-            </div>
-          </div>
-          <div class="pressure">
-            <div class="icon">
-              <img src="/public/icons/pressure.png" alt="Icon for Pressure">
-            </div>
-            <div class="Info">
-              <span class="Value">997hPa</span>
-              <span class="Title">Pressure</span>
-            </div>
-          </div>
-          <div class="uv">
-            <div class="icon">
-              <img src="/public/icons/uv.png" alt="Icon for UV">
-            </div>
-            <div class="Info">
-              <span class="Value">8</span>
-              <span class="Title">UV</span>
-            </div>
-          </div>
-
-
-        </div>
-
-      </section>
-      <section class="forecast">
-        <h3 class="forecastTitle">5 Days Forecast:</h3>
-        <div class="forecastInfo">
-          <div class="forecastDay">
-            <div class="forecastIcon">
+          <div class="weatherDescription">
+            <div class="weatherIcon">
               <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
             </div>
-            <div class="forecastDegree">
-              <span class="forecastMax">24°C</span>
-              <span class="forecastMin">18°C</span>
+            <h3 class="weatherStatu">Sunny</h3>
+          </div>
+          <div class="extraDetail">
+            <div class="humidity">
+              <div class="icon">
+                <img src="/public/icons/humidity.png" alt="Icon for Humidity">
+              </div>
+              <div class="Info">
+                <span class="Value">41%</span>
+                <span class="Title">Humidity</span>
+              </div>
             </div>
-            <span class="forecastDayName">Monday</span>
+            <div class="wind">
+              <div class="icon">
+                <img src="/public/icons/wind.png" alt="Icon for Wind">
+              </div>
+              <div class="Info">
+                <span class="Value">2km/h</span>
+                <span class="Title">Wind Speed</span>
+              </div>
+            </div>
+            <div class="pressure">
+              <div class="icon">
+                <img src="/public/icons/pressure.png" alt="Icon for Pressure">
+              </div>
+              <div class="Info">
+                <span class="Value">997hPa</span>
+                <span class="Title">Pressure</span>
+              </div>
+            </div>
+            <div class="uv">
+              <div class="icon">
+                <img src="/public/icons/uv.png" alt="Icon for UV">
+              </div>
+              <div class="Info">
+                <span class="Value">8</span>
+                <span class="Title">UV</span>
+              </div>
+            </div>
+
 
           </div>
 
-        </div>
-      </section>
+        </section>
+
+      </div>
+      <div class="notCurrent">
+        <!-- Forecast -->
+        <section class="forecast">
+          <h3 class="forecastTitle">5 Days Forecast:</h3>
+          <div class="forecastInfo">
+            <div class="forecastDay">
+              <div class="forecastIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <div class="forecastDegree">
+                <span class="forecastMax">24°C</span>
+                <span class="forecastMin">18°C</span>
+              </div>
+              <span class="forecastDayName">Monday</span>
+
+            </div>
+
+            <div class="forecastDay">
+              <div class="forecastIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <div class="forecastDegree">
+                <span class="forecastMax">24°C</span>
+                <span class="forecastMin">18°C</span>
+              </div>
+              <span class="forecastDayName">Monday</span>
+
+            </div>
+
+            <div class="forecastDay">
+              <div class="forecastIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <div class="forecastDegree">
+                <span class="forecastMax">24°C</span>
+                <span class="forecastMin">18°C</span>
+              </div>
+              <span class="forecastDayName">Monday</span>
+
+            </div>
+
+            <div class="forecastDay">
+              <div class="forecastIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <div class="forecastDegree">
+                <span class="forecastMax">24°C</span>
+                <span class="forecastMin">18°C</span>
+              </div>
+              <span class="forecastDayName">Monday</span>
+
+            </div>
+
+            <div class="forecastDay">
+              <div class="forecastIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <div class="forecastDegree">
+                <span class="forecastMax">24°C</span>
+                <span class="forecastMin">18°C</span>
+              </div>
+              <span class="forecastDayName">Monday</span>
+
+            </div>
+
+          </div>
+        </section>
+        <!-- Hourly Forecast -->
+        <section class="hourlyForecast">
+          <h3 class="hourlyTitle">Hourly Forecast:</h3>
+          <div class="hourlyCards">
+            <div class="hourlyCard">
+              <span class="hourlyTime">09:00</span>
+              <div class="hourlyIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <span class="hourlyDegree">24°C</span>
+              <div class="windDirectionIcon">
+                <img src="/public/icons/windDirection.png" alt="Icon for Wind Direction">
+              </div>
+              <span class="hourlyWind">2km/h</span>
+            </div>
+
+            <div class="hourlyCard">
+              <span class="hourlyTime">09:00</span>
+              <div class="hourlyIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <span class="hourlyDegree">24°C</span>
+              <div class="windDirectionIcon">
+                <img src="/public/icons/windDirection.png" alt="Icon for Wind Direction">
+              </div>
+              <span class="hourlyWind">2km/h</span>
+            </div>
+
+            <div class="hourlyCard">
+              <span class="hourlyTime">09:00</span>
+              <div class="hourlyIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <span class="hourlyDegree">24°C</span>
+              <div class="windDirectionIcon">
+                <img src="/public/icons/windDirection.png" alt="Icon for Wind Direction">
+              </div>
+              <span class="hourlyWind">2km/h</span>
+            </div>
+
+            <div class="hourlyCard">
+              <span class="hourlyTime">09:00</span>
+              <div class="hourlyIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <span class="hourlyDegree">24°C</span>
+              <div class="windDirectionIcon">
+                <img src="/public/icons/windDirection.png" alt="Icon for Wind Direction">
+              </div>
+              <span class="hourlyWind">2km/h</span>
+            </div>
+
+            <div class="hourlyCard">
+              <span class="hourlyTime">09:00</span>
+              <div class="hourlyIcon">
+                <img src="/public/WeatherImages/100.png" alt="Icon for description statu of weather">
+              </div>
+              <span class="hourlyDegree">24°C</span>
+              <div class="windDirectionIcon">
+                <img src="/public/icons/windDirection.png" alt="Icon for Wind Direction">
+              </div>
+              <span class="hourlyWind">2km/h</span>
+            </div>
+          </div>
+        </section>
+
+      </div>
+
     </div>
   </main>
   <script type="module" src="main.js"></script>
