i add DarkMode Switch

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div class="container">
     <header>
       <div class="darkMode">
-        <div class="darkModBtn">
+        <div class="darkModBtn" data-darkModeToggle>
           <span class="elipse"></span>
         </div>
-        <span class="DarkModeTitle">Light Mode</span>
+        <span class="DarkModeTitle" data-DarkModeTitle>Light Mode</span>
       </div>
       <div class="search">
         <button class="search-btn">
