i fixed some problems

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <title>Weather-App</title>
 </head>
 
-<body class="dark">
+<body class="light">
   <div class="container">
     <header>
       <div class="darkMode">
         <div class="darkModBtn" data-darkModeToggle>
-          <span class="elipse"></span>
+          <span class="elipse" data-elipse></span>
         </div>
         <span class="DarkModeTitle" data-DarkModeTitle>Light Mode</span>
       </div>
