i add some logic like dropdoun

--- a/index.html
+++ b/index.html
@@ -18,11 +18,32 @@
         </div>
         <span class="DarkModeTitle" data-DarkModeTitle>Light Mode</span>
       </div>
-      <div class="search">
+      <!-- <div class="search">
         <button class="search-btn">
           <img src="./public/icons/search.png" alt="Icon for SearchBar">
         </button>
         <input type="text" class="search-bar" placeholder="Search for your preffered city..." />
+      </div> -->
+      <!-- DropDoun -->
+      <div class="dropDoun">
+        <div class="dropDounBtn" data-dropDounBtn>
+          <div class="selectCountry">
+            <!-- <div class="CountryFlag">
+              <img src="https://flagsapi.com/BE/flat/64.png" alt="Icon for Country">
+            </div> -->
+            <span class="countryName">Select City</span>
+          </div>
+          <span class="caret"></span>
+        </div>
+        <div class="dropDounContent" data-dropDounContent>
+          <div class="dropDounSearch">
+            <span class="icon-search"></span>
+            <input type="text" class="search-bar" placeholder="Search for your preffered city..." data-search />
+          </div>
+          <ul class="countrys" data-selectCountrys>
+            
+          </ul>
+        </div>
       </div>
       <div class="location">
         <div class="locationIcon">
