i add current location

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           </ul>
         </div>
       </div>
-      <div class="location">
+      <button class="location" data-locationBtn>
         <div class="locationIcon">
           <img src="./public/icons/location.png" alt="Icon for Location">
         </div>
         <span class="locationTitle">Current Location</span>
-      </div>
+      </button>
     </header>
   </div>
   <main>
