i add blur class in initial

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="current">
         <!-- Date time info -->
-        <section class="dateTimeInfo">
+        <section class="dateTimeInfo blur">
           <h1 class="city" data-cityName>Athens</h1>
           <div class="dateTime">
             <span class="time" data-cityTime>09:03</span>
@@ -65,7 +65,7 @@
           </div>
         </section>
         <!-- WeatherDetail -->
-        <section class="weatherDetail">
+        <section class="weatherDetail blur">
           <div class="mainDetail">
             <h2 class="weatherDegree" data-currentWetherTemperture>24°C</h2>
             <div class="weatherinfo">
@@ -145,7 +145,7 @@
       </div>
       <div class="notCurrent">
         <!-- Forecast -->
-        <section class="forecast">
+        <section class="forecast blur">
           <h3 class="forecastTitle" >5 Days Forecast:</h3>
           <div class="forecastInfo" data-daysForecats>
             <div class="forecastDay">
@@ -210,8 +210,8 @@
 
           </div>
         </section>
-        <!-- Hourly Forecast -->
-        <section class="hourlyForecast">
+        <!-- Hourly Forecast --> 
+        <section class="hourlyForecast blur">
           <h3 class="hourlyTitle">Hourly Forecast:</h3>
           <div class="hourlyCards" data-hourlyForecast>
             <div class="hourlyCard">
