i added some logic

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="light">
+  <div class="overlay"></div>
   <div class="container">
     <header>
       <div class="darkMode">
@@ -18,13 +19,6 @@
         </div>
         <span class="DarkModeTitle" data-DarkModeTitle>Light Mode</span>
       </div>
-      <!-- <div class="search">
-        <button class="search-btn">
-          <img src="./public/icons/search.png" alt="Icon for SearchBar">
-        </button>
-        <input type="text" class="search-bar" placeholder="Search for your preffered city..." />
-      </div> -->
-      <!-- DropDoun -->
 
         <div class="dropDoun">
           <div class="dropDounBtn" data-dropDounBtn>
@@ -48,6 +42,10 @@
           </div>
           <span class="locationTitle">Current Location</span>
         </button>
+        <!-- mobile -->
+        <div class="icon-menu1" data-mobileIcon></div>
+
+
 
       </div>
       
